# Lab_moveit

./: ARUCO_IMPLEMENTATION.md  Guide_utilisation_warehouse_complet.md  MAPPING.md  Nav2_Setup.md  README_Bras_seulement.md  README_Lab_moveit.md  README_mapping.md  SYSTÈME_DE_GESTION_WAREHOUSE.md  aruco_detector_node.py  box_detector_node.py  controller_params.yaml  demo_robot.py  frames_2025-12-19_13.32.17.gv  frames_2026-01-01_11.12.30.gv  frames_2026-01-04_13.17.44.gv  frames_2026-01-09_23.09.11.gv  frames_2026-01-09_23.09.27.gv  gazebo_logs.txt  gazebo_verbose.txt  generate_aruco_markers.py  pick_place_controller.py  pick_place_service.py  regenerate_markers.py  send_arm_home.sh  start_controllers.sh  test_aruco_detection.py  test_aruco_detection_v2.py  test_mission.py  test_simple_robot.urdf
backups/2026-01-03/: mission_orchestrator_node.py.backup  nav2_params.yaml.backup
logs/: gaz_20260104_152113.tx  gaz_20260104_152333.tx  gaz_20260104_183830.txt  gaz_20260104_184851.txt  gaz_20260104_184921.txt  nav_20260104_184031.txt
src/: frames_2026-01-04_14.44.08.gv  frames_2026-01-04_14.45.12.gv
src/IFRA_LinkAttacher/linkattacher_msgs/: CMakeLists.txt
src/battery_manager/: package.xml  setup.cfg  setup.py
src/battery_manager/battery_manager/: battery_manager_node.py
src/location_manager/: package.xml  setup.cfg  setup.py
src/location_manager/config/: warehouse_zones.yaml  warehouse_zones.yaml.backup
src/location_manager/location_manager/: location_manager_node.py  test_location_manager.py
src/location_manager/srv/: GetZoneInfo.srv
src/mission_orchestrator/: package.xml  setup.py
src/mobile_manipulator_sim/: CMakeLists.txt  package.xml
src/mobile_manipulator_sim/config/: aruco_params.yaml  ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml  nav2_params_old.yaml  robot_controllers.yaml  simple_arm_controllers.yaml  ur5_controllers.yaml
src/mobile_manipulator_sim/launch/: mobile_base.launch.py  mobile_ur5.launch.py  test_mobile_base.launch.py
src/mobile_manipulator_sim/urdf/: mobile_base.urdf  mobile_base.urdf.xacro  mobile_base_only.urdf.xacro  mobile_simple_arm.urdf.xacro  mobile_ur5.urdf.xacro  mobile_ur5.urdf.xacro.backup  simple_arm.urdf.xacro  simple_mobile_robot.urdf  simple_mobile_robot_4_roues.urdf  test_robot.urdf
src/my_gazebo_world/: CMakeLists.txt  package.xml
src/my_gazebo_world/launch/: mapping.launch.py  navigation.launch.py  spawn_mobile_ur5_warehouse.launch.py  warehouse_complete.launch  warehouse_system.launch.py  warehouse_with_robot.launch.py
src/my_gazebo_world/maps/: frames_2025-12-28_16.29.08.gv  warehouse_map.pgm  warehouse_map.yaml  warehouse_map_OLD.pgm  warehouse_map_last_version.pgm  warehouse_map_last_version.yaml
src/my_gazebo_world/materials/scripts/: aruco_markers.material  charging.material  start_stop.material
src/my_gazebo_world/rviz/: mapping_config.rviz
src/my_gazebo_world/urdf/: black_table.urdf
src/my_gazebo_world/worlds/: test_plane.world  warehouse.world  warehouse.world.backup  warehouse_sans_markers.world.backup  warehouse_test.world  warehouse_v2.world  warehouse_v3.world  warehouse_v4.world  warehouse_v5.world  warehouse_with_old_robot.world.backup
src/my_panda_moveit_config/: .setup_assistant  package.xml
src/ur_yt_sim/: CMakeLists.txt  package.xml
src/ur_yt_sim/src/: pick_place.cpp
src/warehouse_manager/: package.xml  setup.cfg  setup.py
(+17 files in other folders)
